iphone alignment fix

--- a/app/assets/stylesheets/partials/_landing-page__social.scss
+++ b/app/assets/stylesheets/partials/_landing-page__social.scss
@@ -22,7 +22,7 @@
   }
 
   .iphone {
-    margin: -75px auto 0;
+    margin: -70px auto 0;
   }
   .iphone__header {
     float: right;
